--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,6 @@
 <section id="about" class="panel is-default">
   <div class="hero hero--about">
-    <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
+    <h1 class="headline">We think about the <span class="coral">next generation</span> of work.</h1>
     <p class="subhead">고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다. 기술이 인간의 가능성을 확장하는 방식에 주목합니다.</p>
     <p class="subhead">NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.</p>
   </div>
@@ -21,7 +21,7 @@
     <p class="detail-text">CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
 
     <div class="product-image">
-      <img src="/images/leavo_mainvisual.jpg" alt="CBW 활용 예시">
+      <img src="/images/leavo_mainvisual.jpg" alt="CBW 실제 활용 모습">
     </div>
 
     <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
@@ -32,7 +32,7 @@
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="#" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <a href="YOUR_CBW_PDF_LINK" target="_blank" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
@@ -51,6 +51,10 @@
     <h3>01. 듀얼 센서를 통한 정밀한 리스크 감지</h3>
     <p class="detail-text">외부 기온과 피부 온도를 동시에 측정하며, 독자적인 알고리즘을 통해 심부 체온이 37.8°C 이상으로 상승할 경우 즉시 경고를 보냅니다.</p>
 
+    <div class="product-image" style="background: #f1f5f9; height: 300px; display:flex; align-items:center; justify-content:center; border-radius:16px;">
+      <p style="color:var(--muted)">[I-BOW 알림 방식 시각화 이미지 배치 예정]</p>
+    </div>
+
     <h3>02. 소리, 빛, 진동을 통한 확실한 알림</h3>
     <p class="detail-text">현장의 소음이나 주변 환경에 상관없이 리스크를 인지할 수 있도록 소리, 빛, 진동의 세 가지 패턴으로 위험을 알리고 수분 섭취와 휴식을 권고합니다.</p>
 
@@ -67,7 +71,7 @@
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="#" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <a href="YOUR_IBOW_PDF_LINK" target="_blank" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
@@ -80,17 +84,17 @@
       <div class="contact-card">
         <div class="card-label">Email</div>
         <div class="card-value"><a href="mailto:info@tuatua.kr" style="color:inherit; text-decoration:none;">info@tuatua.kr</a></div>
-        <p class="card-note">문의 주시면 영업일 기준 1시간 이내에 확인하여 답변 드립니다.</p>
+        <p style="font-size:14px; color:var(--muted); margin:0;">영업일 기준 1시간 이내에 답변 드립니다.</p>
       </div>
       <div class="contact-card">
         <div class="card-label">Address</div>
         <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
-        <p class="card-note">강남역 5번 출구 인근에 위치하고 있습니다.</p>
+        <p style="font-size:14px; color:var(--muted); margin:0;">강남역 5번 출구 인근</p>
       </div>
       <div class="contact-card">
         <div class="card-label">Partnership</div>
-        <div class="card-value"><a href="https://tuatua.kr" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">tuatua.kr</a></div>
-        <p class="card-note">넥스트워크 랩의 모기업 (주)투아투아 공식 홈페이지</p>
+        <div class="card-value"><a href="https://tuatua.kr" target="_blank" style="color:inherit; text-decoration:none;">tuatua.kr</a></div>
+        <p style="font-size:14px; color:var(--muted); margin:0;">모기업 (주)투아투아 공식 홈페이지</p>
       </div>
     </div>
   </div>
