--- a/content/_index.html
+++ b/content/_index.html
@@ -1,8 +1,15 @@
 <section id="about" class="panel is-default">
   <div class="hero hero--about">
-    <h1 class="headline">We think about the <span style="color: var(--accent-coral)">next generation</span> of work.</h1>
-    <p class="subhead">고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다. 기술이 인간의 가능성을 확장하는 방식에 주목합니다.</p>
-    <p class="subhead">NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.</p>
+    <h1 class="headline">We think about the <span class="coral">next generation</span> of work.</h1>
+
+    <p class="subhead">
+      고령화와 AI 시대에 우리는 <strong>“다음 세대의 일”</strong>을 고민합니다.
+      기술이 인간의 가능성을 확장하는 방식에 주목합니다.
+    </p>
+
+    <p class="subhead">
+      NextWork Lab.은 의료·돌봄·산업 현장에서 근로자가 안전하게 일하고, 신체 기능을 유지하는데 도움이 되는 솔루션을 소개합니다.
+    </p>
   </div>
 </section>
 
@@ -12,7 +19,7 @@
     <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/cbw.png" alt="CBW 메인 이미지">
+      <img src="/images/cbw.png" alt="CBW 메인 비주얼">
     </div>
 
     <p class="subhead">CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p>
@@ -21,7 +28,7 @@
     <p class="detail-text">CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
 
     <div class="product-image">
-      <img src="/images/leavo_mainvisual.jpg" alt="CBW 활용 모습">
+      <img src="/images/leavo_mainvisual.jpg" alt="CBW 활용 시나리오">
     </div>
 
     <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
@@ -31,7 +38,7 @@
     <p class="detail-text">물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. 반복적이고 강도가 있는 동작을 고려한 설계입니다.</p>
 
     <div class="cta-group">
-      <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
+      <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
       <a href="YOUR_CBW_PDF_LINK" target="_blank" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
@@ -43,7 +50,7 @@
     <p class="section-desc">고온 환경이나 위험한 작업 현장에서 근로자의 생명과 건강을 지키는 스마트 안전 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/nextworklab_symbol.png" alt="I-BOW 메인 이미지">
+      <img src="/images/nextworklab_symbol.png" alt="I-BOW 메인 비주얼">
     </div>
 
     <p class="subhead">I-BOW는 열사병 등 고온 환경에서의 신체 리스크를 사전에 감지하여 알리는 손목시계형 웨어러블 디바이스입니다.</p>
@@ -66,7 +73,7 @@
     </div>
 
     <div class="cta-group">
-      <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
+      <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의]" class="btn-nextwork btn-inquiry">문의하기</a>
       <a href="YOUR_IBOW_PDF_LINK" target="_blank" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
@@ -81,7 +88,6 @@
         <div class="card-label">Email</div>
         <div class="card-value"><a href="mailto:info@tuatua.kr" style="color:inherit; text-decoration:none;">info@tuatua.kr</a></div>
         <p class="card-note">문의 주시면 영업일 기준 1시간 이내에 확인하여 답변 드립니다.</p>
-        <a href="mailto:info@tuatua.kr?subject=[문의] 제품 도입 관련 문의" class="btn-nextwork btn-inquiry" style="margin-top: 20px; width: 100%;">메일 보내기</a>
       </div>
       <div class="contact-card">
         <div class="card-label">Address</div>
