--- a/content/_index.html
+++ b/content/_index.html
@@ -12,17 +12,13 @@
     <p class="section-desc">근로자의 신체 부담을 줄이고 잠재력을 극대화하는 솔루션입니다.</p>
 
     <div class="product-image">
-      <img src="/images/cbw.png" alt="CBW 메인 이미지">
+      <img src="/images/CBW_WEB_A4_MS_1.png" alt="CBW 메인 이미지">
     </div>
 
     <p class="subhead">CBW는 바지 일체형으로 설계된 입는 어시스트 수트입니다. 작업 중 허리와 하체에 가해지는 부담을 줄이고, 올바른 자세를 유지하도록 돕습니다.</p>
 
     <h3>01. 일상 착용을 전제로 설계된 구조</h3>
     <p class="detail-text">CBW는 별도의 장비를 착용하거나 휴대할 필요가 없습니다. 일반 작업복처럼 착용할 수 있어 출퇴근이나 일상 업무 중에도 자연스럽게 사용할 수 있습니다.</p>
-
-    <div class="product-image">
-      <img src="/images/leavo_mainvisual.jpg" alt="CBW 실제 활용 모습">
-    </div>
 
     <h3>02. 자세를 잡아주는 핵심 메커니즘</h3>
     <p class="detail-text">복부 서포터를 통해 복강 내 압력을 높이고 요추를 안정적으로 지지합니다. 장시간 작업에서도 자세 유지에 도움이 되도록 설계되었습니다.</p>
