--- a/content/_index.html
+++ b/content/_index.html
@@ -88,7 +88,7 @@
    
         <div class="contact-card">
         <div class="card-label">Address</div>
-        <div class="card-value">서울특별시 서초구 강남대로53길 8, 7-179</div>
+        <div class="card-value">서울시 서초구 강남대로53길 8, 7-179</div>
         <p style="font-size:14px; color:var(--muted); margin:0;">강남역 5번 출구 인근</p>
       </div>
    <div class="contact-card">
