--- a/content/_index.html
+++ b/content/_index.html
@@ -83,7 +83,7 @@
       </div>
       <div class="contact-card">
         <div class="card-label">전화 번호</div>
-        <div class="card-value">070-4571-9930</div>
+        <div class="card-value">010-5643-5471</div>
         <p style="font-size:14px; color:var(--muted); margin:0;">구매 문의 전화입니다.</p>
       </div>
    
@@ -94,7 +94,7 @@
       </div>
    <div class="contact-card">
         <div class="card-label">Partnership</div>
-        <div class="card-value"><a href="https://tuatua.kr" target="_blank" style="color:inherit; text-decoration:none;">tuatua.kr</a></div>
+        <div class="card-value"><a href="https://tuatua.kr" target="_blank" style="color:inherit; text-decoration:none;">TUA Inc.</a></div>
         <p style="font-size:14px; color:var(--muted); margin:0;">NextWork Lab.은 주식회사 TUA의 판매 브랜드입니다.</p>
       </div>
     </div>
