--- a/content/_index.html
+++ b/content/_index.html
@@ -81,11 +81,19 @@
         <div class="card-value"><a href="mailto:info@tuatua.kr" style="color:inherit; text-decoration:none;">info@tuatua.kr</a></div>
         <p style="font-size:14px; color:var(--muted); margin:0;">영업일 기준 1시간 이내에 답변 드립니다.</p>
       </div>
-      <div class="contact-card">
-        <div class="card-label">전화 번호</div>
-        <div class="card-value">010-5643-5471</div>
-        <p style="font-size:14px; color:var(--muted); margin:0;">구매 문의 전화입니다.</p>
-      </div>
+  <div class="card-value">
+  <a id="contact-phone" href="#"></a>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const num = "010-5643-5471";
+    const el = document.getElementById("contact-phone");
+    el.textContent = num;
+    el.href = "tel:" + num.replace(/-/g, "");
+  });
+</script>
+
    
         <div class="contact-card">
         <div class="card-label">Address</div>
