--- a/content/_index.html
+++ b/content/_index.html
@@ -80,7 +80,7 @@
       <div class="contact-card">
         <div class="card-label">전자 메일</div>
         <div class="card-value">
-          <a href="mailto:info@tuatua.kr" style="color:inherit; text-decoration:none;">info@tuatua.kr</a>
+          <a id="contact-email" href="#" style="color:inherit; text-decoration:none;"></a>
         </div>
         <p style="font-size:14px; color:var(--muted); margin:0;">영업일 기준 1시간 이내에 답변 드립니다.</p>
       </div>
@@ -102,7 +102,7 @@
       <div class="contact-card">
         <div class="card-label">Partnership</div>
         <div class="card-value">
-          <a href="https://tuatua.kr" target="_blank" style="color:inherit; text-decoration:none;">TUA Inc.</a>
+          <a href="https://tuatua.kr" target="_blank" rel="noopener" style="color:inherit; text-decoration:none;">TUA Inc.</a>
         </div>
         <p style="font-size:14px; color:var(--muted); margin:0;">NextWork Lab.은 주식회사 TUA의 판매 브랜드입니다.</p>
       </div>
@@ -111,12 +111,25 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      const num = "010-5643-5471";
-      const el = document.getElementById("contact-phone");
-      if (!el) return;
-      el.textContent = num;
-      el.href = "tel:" + num.replace(/-/g, "");
+      // Phone
+      const phone = "010-5643-5471";
+      const phoneEl = document.getElementById("contact-phone");
+      if (phoneEl) {
+        phoneEl.textContent = phone;
+        phoneEl.href = "tel:" + phone.replace(/-/g, "");
+      }
+
+      // Email (assembled to reduce scraping)
+      const user = "info";
+      const domain = "tuatua.kr";
+      const emailEl = document.getElementById("contact-email");
+      if (emailEl) {
+        const email = user + "@" + domain;
+        emailEl.textContent = email;
+        emailEl.href = "mailto:" + email;
+      }
     });
   </script>
 </section>
+
 
