--- a/content/_index.html
+++ b/content/_index.html
@@ -26,11 +26,12 @@
     <h3>03. 반복 작업 환경을 고려한 보조 방식</h3>
     <p class="detail-text">물건을 들어 올리거나 내릴 때에는 바지 내부의 밴드 구조가 작동합니다. 반복적이고 강도가 있는 동작을 고려한 설계입니다.</p>
 
-
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[CBW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-      <a href="https://drive.google.com/file/d/1O2crerevRxQBVMDhCaam6YU0o-Hhhx0T/preview" 
-   target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <a href="#"
+         data-pdf="https://drive.google.com/file/d/1O2crerevRxQBVMDhCaam6YU0o-Hhhx0T/preview"
+         onclick="openCatalogGate(event)"
+         class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
@@ -65,8 +66,10 @@
 
     <div class="cta-group">
       <a href="mailto:info@tuatua.kr?subject=[I-BOW 제품 문의] 문의드립니다" class="btn-nextwork btn-inquiry">문의하기</a>
-         <a href="https://drive.google.com/file/d/1guSElPx47rHLTqPqHsWyfPbEF8lYGm8a/preview" 
-   target="_blank" rel="noopener" class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
+      <a href="#"
+         data-pdf="https://drive.google.com/file/d/1guSElPx47rHLTqPqHsWyfPbEF8lYGm8a/preview"
+         onclick="openCatalogGate(event)"
+         class="btn-nextwork btn-download">카탈로그 보기 (PDF)</a>
     </div>
   </div>
 </section>
@@ -109,27 +112,75 @@
     </div>
   </div>
 
+  <!-- Catalog Gate Modal -->
+  <div id="catalog-gate" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.6); z-index:9999;">
+    <div style="max-width:420px; margin:10vh auto; background:#fff; padding:24px; border-radius:12px;">
+      <h3 style="margin-top:0;">카탈로그 열기</h3>
+      <p style="font-size:14px; color:var(--muted); margin:0 0 14px;">자료 제공을 위해 간단한 정보만 확인합니다.</p>
+
+      <input id="cg-name" placeholder="이름" style="width:100%; margin:0 0 10px;">
+      <input id="cg-org" placeholder="소속 / 회사명" style="width:100%; margin:0 0 10px;">
+      <input id="cg-phone" placeholder="연락 가능한 전화번호 (지역번호·해외 번호 가능)" style="width:100%; margin:0 0 14px;">
+
+      <button type="button" onclick="submitCatalogGate()" style="width:100%;">확인 후 열기</button>
+    </div>
+  </div>
+
   <script>
+    let targetPdf = null;
+
+    function openCatalogGate(e) {
+      e.preventDefault();
+      targetPdf = (e.currentTarget && e.currentTarget.dataset) ? e.currentTarget.dataset.pdf : null;
+      const gate = document.getElementById("catalog-gate");
+      if (!gate || !targetPdf) return;
+      gate.style.display = "block";
+    }
+
+    function submitCatalogGate() {
+      const nameEl = document.getElementById("cg-name");
+      const orgEl = document.getElementById("cg-org");
+      const phoneEl = document.getElementById("cg-phone");
+      const gate = document.getElementById("catalog-gate");
+
+      const name = nameEl ? nameEl.value.trim() : "";
+      const org = orgEl ? orgEl.value.trim() : "";
+      let phone = phoneEl ? phoneEl.value.trim() : "";
+
+      // allow digits and "+" only, do not force 010
+      phone = phone.replace(/[^0-9+]/g, "");
+
+      if (!name || !org || phone.length < 8) {
+        alert("이름, 소속, 연락처를 정확히 입력해 주세요.");
+        return;
+      }
+
+      if (gate) gate.style.display = "none";
+
+      // 여기서 서버 전송을 붙일 수 있습니다.
+      // fetch("/api/catalog-lead", { method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify({ name, org, phone, pdf: targetPdf }) });
+
+      window.open(targetPdf, "_blank");
+    }
+
     document.addEventListener("DOMContentLoaded", function () {
       // Phone
       const phone = "010-5643-5471";
-      const phoneEl = document.getElementById("contact-phone");
-      if (phoneEl) {
-        phoneEl.textContent = phone;
-        phoneEl.href = "tel:" + phone.replace(/-/g, "");
+      const contactPhoneEl = document.getElementById("contact-phone");
+      if (contactPhoneEl) {
+        contactPhoneEl.textContent = phone;
+        contactPhoneEl.href = "tel:" + phone.replace(/-/g, "");
       }
 
       // Email (assembled to reduce scraping)
       const user = "info";
       const domain = "tuatua.kr";
-      const emailEl = document.getElementById("contact-email");
-      if (emailEl) {
+      const contactEmailEl = document.getElementById("contact-email");
+      if (contactEmailEl) {
         const email = user + "@" + domain;
-        emailEl.textContent = email;
-        emailEl.href = "mailto:" + email;
+        contactEmailEl.textContent = email;
+        contactEmailEl.href = "mailto:" + email;
       }
     });
   </script>
 </section>
-
-
